--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main>
     
-  <img src="Aliança.png" alt="Aliança" class="alianca" />
+  <img src="img/Aliança.png" alt="Aliança" class="alianca" />
 
   <h1>Curso de Noivos</h1>
   <p class="versiculo">
@@ -34,8 +34,8 @@
   <a href="inscricao.html" class="btn">INSCREVA-SE</a>
 
     <div class="logos">
-      <img src="Ad Agape.png" alt="Adágape" />
-      <img src="juva.png" alt="Juva" />
+      <img src="img/Ad Agape.png" alt="Adágape" />
+      <img src="img/juva.png" alt="Juva" />
     </div>
 
   
