--- a/inscricao.html
+++ b/inscricao.html
@@ -8,7 +8,7 @@
 </head>
 <body class="admin">  
   <main>
-    <img src="Aliança.png" alt="Aliança" class="alianca" />
+    <img src="img/Aliança.png" alt="Aliança" class="alianca" />
 
     <h1>Faça sua Inscrição!</h1>
 
@@ -47,8 +47,8 @@
     </form>
 
     <div class="logos">
-      <img src="Ad Agape.png" alt="Adágape" />
-      <img src="juva.png" alt="Juva" />
+      <img src="img/Ad Agape.png" alt="Adágape" />
+      <img src="img/juva.png" alt="Juva" />
     </div>
   </main>
 
