--- a/inscricao.html
+++ b/inscricao.html
@@ -40,7 +40,7 @@
         <option value="Cartão">Cartão</option>
       </select>
 
-      <p class="obs">💡 Será cobrada uma taxa por casal. <br> Verifique as informações no seu e-mail após a inscrição.</p>
+      <p class="obs">💡 Será cobrada uma taxa de R$40,00 por casal. <br> Verifique as informações no seu e-mail após a inscrição.</p>
       
       <button type="submit" class="btn">ENVIAR INSCRIÇÃO</button>
       <a class="btn" href="index.html">Voltar</a>
