--- a/inscricao.html
+++ b/inscricao.html
@@ -23,15 +23,15 @@
     <!-- Formulário aparece por padrão -->
     <form class="formulario">
       <input type="text" name="nome" placeholder="Nome completo" required />
-      <input type="text" name="nome_conj" placeholder="Nome do(a) cônjuge" required />
+      <input type="text" name="nome_conj" placeholder="Nome completo do seu cônjuge" required />
       <input type="tel" name="telefone" placeholder="Telefone com DDD" required />
       <input type="email" name="email" placeholder="Email" required />
       <input type="text" name="igreja" placeholder="De qual igreja você é?" required />
       <select name="estado_civil" required>
         <option value="" disabled selected>Estado civil</option>
         <option value="Namorando para casar">Namorando para casar</option>
-        <option value="Noivo">Noivo(a)</option>
-        <option value="Casado">Casado(a) a 1 ano</option>
+        <option value="Noivo">Noivos</option>
+        <option value="Casado">Casados a 1 ano</option>
       </select>
       <select name="forma_pagamento" required>
         <option value="" disabled selected>Forma de pagamento</option>
