--- a/inscricao.html
+++ b/inscricao.html
@@ -16,7 +16,7 @@
     <div class="confirmacao hidden">
       <h2>✅ Cadastro Concluído!</h2>
       <p>Enviamos um e-mail com os detalhes da sua inscrição.</p>
-      <button onclick="reenviarEmail()">🔁 Reenviar E-mail</button><br>
+<!--       <button onclick="reenviarEmail()">🔁 Reenviar E-mail</button><br> -->
       <button onclick="excluirCadastro()">❌ Excluir Cadastro</button>
     </div>
 
